--- a/FoodTrial.MVC/Views/Shared/_Layout.cshtml
+++ b/FoodTrial.MVC/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <li>@Html.ActionLink("Foods", "Index", "Food")</li>
+                    <li>@Html.ActionLink("Trials", "Index", "Trial")</li>
+                    <li>@Html.ActionLink("Medicines", "Index", "Medicine")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
