fixed errors trial create

--- a/FoodTrial.MVC/Views/Trial/Index.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-if(TempData.ContainsKey("SaveResult"))
+@if (TempData.ContainsKey("SaveResult"))
 {
 <div class="alert alert-success fade-in" role="alert">
     @ViewBag.SaveResult
