--- a/FoodTrial.MVC/Views/Trial/Delete.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model FoodTrial.Models.FoodDetail
+﻿@model FoodTrial.Models.TrialDetail
 
 @{
     ViewBag.Title = "Delete";
@@ -8,9 +8,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>FoodDetail</h4>
+    <h4>TrialDetail</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.TrialId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TrialId)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.FoodId)
         </dt>
@@ -20,19 +28,43 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Comment)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Comment)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.DateTime)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.DateTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NumberOfDays)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NumberOfDays)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MedicalIntervention)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MedicalIntervention)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.IsSafe)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsSafe)
         </dd>
 
     </dl>
