--- a/FoodTrial.MVC/Views/Shared/_Layout.cshtml
+++ b/FoodTrial.MVC/Views/Shared/_Layout.cshtml
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Food Trial Helper</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+   
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+            <div class="container">
+                <a class="navbar-brand" href="#">Food Trial Helper</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -24,9 +23,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                    <li>@Html.ActionLink("Foods", "Index", "Food")</li>
-                    <li>@Html.ActionLink("Trials", "Index", "Trial")</li>
-                    <li>@Html.ActionLink("Medicines", "Index", "Medicine")</li>
+                        <li>@Html.ActionLink("Foods", "Index", "Food")</li>
+                        <li>@Html.ActionLink("Trials", "Index", "Trial")</li>
+                        <li>@Html.ActionLink("Medicines", "Index", "Medicine")</li>
                     }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
@@ -35,11 +34,65 @@
             </div>
         </div>
     </div>
+   
     <div class="container body-content">
         @RenderBody()
         <hr />
+        <section id="skills">
+            <div class="container">
+                <h1 class="text-center"></h1>
+                <div class="row">
+                    <div class="col-lg-4 mt-4">
+                        <div class="card servicesText">
+                            <div class="card-body">
+                                <h4 class="card-title mt-3"></h4>
+                                <p class="card-text mt-3">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-title mt-3">Create a Food Trial</h4>
+                                <p class="card-text mt-3">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-title mt-3">My Past Food Trials</h4>
+                                <p class="card-text mt-3">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-title mt-3">Food Lists</h4>
+                                <p class="card-text mt-3">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <ul>
+                <li>How to do a Food Trial</li>
+                <li>Additional Resources</li>
+                <li>Disclaimer</li>
+            </ul>
+            <p>&copy; @DateTime.Now.Year - Food Trial Application</p>
         </footer>
     </div>
 
