--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -2,30 +2,41 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Food Trial</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<body>
+    <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <h2 class="hero_title"></h2>
+                    <p class="hero_desc"></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="jumbotron">
+        <h1> Food Trial</h1>
+        <p class="lead"> Food Trial App is to help you be able to track, organize, and provide list of food trials and their results.</p>
+        <p> <a href="https://asp.net" class="btn btn-primary btn-lg"> Learn more &raquo;</a> </p>
+        
+    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Create a Food Trial</h2>
+            <p>
+
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865"> &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Your Past Food Trials</h2>
+            <p></p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866"> &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Your Food Lists</h2>
+            <p></p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> &raquo;</a></p>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</body>
