enum drop down box added

--- a/FoodTrial.MVC/Views/Food/Details.cshtml
+++ b/FoodTrial.MVC/Views/Food/Details.cshtml
@@ -33,7 +33,20 @@
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.AllergenGroup)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.AllergenGroup)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.FoodGroup)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FoodGroup)
+        </dd>
     </dl>
 </div>
 <p>
