--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title"></h2>
+                    <img class="image" src="~/Views/Images/anna headshot winter.jpg" />
+
                     <p class="hero_desc"></p>
                 </div>
             </div>
