--- a/FoodTrial.MVC/Content/Site.css
+++ b/FoodTrial.MVC/Content/Site.css
@@ -5,7 +5,7 @@
 
 .bgimage {
     height: 100vh;
-    background: url('background-image: url('Photo by <a href="https://unsplash.com/@brookelark?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Brooke Lark</a> on <a href="https://unsplash.com/s/photos/food?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> '); background-size: cover;
+    width: 100vw;
     position: relative;
 }
 
