--- a/FoodTrial.MVC/Views/Food/Index.cshtml
+++ b/FoodTrial.MVC/Views/Food/Index.cshtml
@@ -30,26 +30,38 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AllergenGroup)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FoodGroup)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FoodId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.FoodId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.FoodId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.FoodId })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.FoodId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Description)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.AllergenGroup)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FoodGroup)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.FoodId }) |
+        @Html.ActionLink("Details", "Details", new { id = item.FoodId }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.FoodId })
+    </td>
+</tr>
 }
 
 </table>
