--- a/FoodTrial.MVC/Views/Trial/Create.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Create.cshtml
@@ -49,7 +49,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Symptoms, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Symptoms, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EnumDropDownListFor(model => model.ReactionType)
             @Html.ValidationMessageFor(model => model.Symptoms, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -63,7 +63,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ReactionType, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ReactionType, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EnumDropDownListFor(model => model.ReactionType)
             @Html.ValidationMessageFor(model => model.ReactionType, "", new { @class = "text-danger" })
         </div>
     </div>
