multiselect list added, home page edits

--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -3,42 +3,53 @@
 }
 
 <body>
-    <section class="bgimage" id="home">
+    <section class="image" id="home">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title"></h2>
-                    <img class="image" src="~/Views/Images/anna headshot winter.jpg" />
-
+                    <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial.png" />
+                    <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial Second Part.png" />
+                    <img class="img-fluid" src="~/Content/Images/Buttons for Home Page Food Trial.png" />
                     <p class="hero_desc"></p>
                 </div>
             </div>
         </div>
     </section>
-    <div class="jumbotron">
-        <h1> Food Trial</h1>
-        <p class="lead"> Food Trial App is to help you be able to track, organize, and provide list of food trials and their results.</p>
-        <p> <a href="https://asp.net" class="btn btn-primary btn-lg"> Learn more &raquo;</a> </p>
-        
-    </div>
+   
 
     <div class="row">
         <div class="col-md-4">
             <h2>Create a Food Trial</h2>
-            <p>
+            
+           <div class="container">
+                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
 
-            </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865"> &raquo;</a></p>
+                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Create a Food Trial">
+                    </a>
+            </div>
         </div>
         <div class="col-md-4">
             <h2>Your Past Food Trials</h2>
-            <p></p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866"> &raquo;</a></p>
+            <div class="container">
+                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
+
+                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Robots in the Park">
+                    </a>
+
+            </div>
         </div>
+
         <div class="col-md-4">
             <h2>Your Food Lists</h2>
             <p></p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"> &raquo;</a></p>
+            <div class="container">
+                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
+
+                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Robots in the Park">
+                </a>
+
+            </div>
         </div>
     </div>
 </body>
