--- a/FoodTrial.MVC/Content/Site.css
+++ b/FoodTrial.MVC/Content/Site.css
@@ -3,10 +3,15 @@
     padding-bottom: 20px;
 }
 
-.bgimage {
+.navbar-brand{
+    padding: 0 0 0 10px;
+}
+
+.image {
     height: 100vh;
-    width: 100vw;
+    background-size: cover;
     position: relative;
+    
 }
 
 .navbarScroll.navbarDark {
@@ -72,4 +77,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+footer{
+    background-color: #f5f5ef;
 }
