--- a/FoodTrial.MVC/Views/Shared/_Layout.cshtml
+++ b/FoodTrial.MVC/Views/Shared/_Layout.cshtml
@@ -11,15 +11,18 @@
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <div class="container">
-                <a class="navbar-brand" href="#">Food Trial Helper</a>
+            
+                <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Food Trial Helper", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
@@ -32,68 +35,25 @@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
+
+
         </div>
     </div>
-   
+    
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <section id="skills">
-            <div class="container">
-                <h1 class="text-center"></h1>
-                <div class="row">
-                    <div class="col-lg-4 mt-4">
-                        <div class="card servicesText">
-                            <div class="card-body">
-                                <h4 class="card-title mt-3"></h4>
-                                <p class="card-text mt-3">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 mt-4">
-                        <div class="card skillsText">
-                            <div class="card-body">
-                                <h4 class="card-title mt-3">Create a Food Trial</h4>
-                                <p class="card-text mt-3">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 mt-4">
-                        <div class="card skillsText">
-                            <div class="card-body">
-                                <h4 class="card-title mt-3">My Past Food Trials</h4>
-                                <p class="card-text mt-3">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-4 mt-4">
-                        <div class="card skillsText">
-                            <div class="card-body">
-                                <h4 class="card-title mt-3">Food Lists</h4>
-                                <p class="card-text mt-3">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <footer>
-            <ul>
-                <li>How to do a Food Trial</li>
-                <li>Additional Resources</li>
-                <li>Disclaimer</li>
-            </ul>
-            <p>&copy; @DateTime.Now.Year - Food Trial Application</p>
-        </footer>
+        
+         
+                <footer>
+                    <ul>
+                        <li>How to do a Food Trial</li>
+                        <li>Additional Resources</li>
+                        <li>Disclaimer</li>
+                    </ul>
+                    <p>&copy; @DateTime.Now.Year - Food Trial Application</p>
+                </footer>
+            
     </div>
 
     @Scripts.Render("~/bundles/jquery")
