--- a/FoodTrial.MVC/Views/Trial/Create.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Your Trial</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,9 +12,9 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>TrialCreate</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <span class="border"></span>
     <div class="form-group">
         @Html.LabelFor(model => model.FoodId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -49,7 +49,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Symptoms, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.ReactionType)
+            @Html.ListBoxFor(m => m.Symptoms, new MultiSelectList(Enum.GetValues(typeof(FoodTrial.Data.Symptoms))), new { @class = "chzn-select", data_placeholder = "Symptoms..." });
             @Html.ValidationMessageFor(model => model.Symptoms, "", new { @class = "text-danger" })
         </div>
     </div>
