--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -10,7 +10,6 @@
                     <h2 class="hero_title"></h2>
                     <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial.png" />
                     <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial Second Part.png" />
-                    <img class="img-fluid" src="~/Content/Images/Buttons for Home Page Food Trial.png" />
                     <p class="hero_desc"></p>
                 </div>
             </div>
@@ -23,19 +22,21 @@
             <h2>Create a Food Trial</h2>
             
            <div class="container">
-                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
+                <a class="btn btn-default" href="https://localhost:44370/Trial/Create">
 
-                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Create a Food Trial">
+                    <img class="img-thumbnail" src="~/Content/Images/Create Food Trial pic.jpg" alt="Create a Food Trial">
                     </a>
             </div>
         </div>
         <div class="col-md-4">
             <h2>Your Past Food Trials</h2>
             <div class="container">
-                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
+                <a class="btn btn-default" href="https://localhost:44370/Trial">
+                    <span class="badge badge-secondary">Your Past Food Trials
 
-                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Robots in the Park">
-                    </a>
+                    <img class="img-thumbnail" src="~/Content/Images/Past Food Trials.jpg" alt="Your Past Food Trials">
+                    </span>
+                </a>
 
             </div>
         </div>
@@ -46,7 +47,7 @@
             <div class="container">
                 <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
 
-                    <img class="img-thumbnail" src="https://pixelprowess.com/i/park_tn.png" alt="Robots in the Park">
+                    <img class="img-thumbnail" src="~/Content/Images/Food list.jpg" alt="Your Food Lists">
                 </a>
 
             </div>
