--- a/FoodTrial.MVC/Content/Site.css
+++ b/FoodTrial.MVC/Content/Site.css
@@ -1,10 +1,38 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+.nav {
+    color: black;
 }
 
 .navbar-brand{
     padding: 0 0 0 10px;
+    color: black;
+}
+
+.bgimage {
+    height: 100vh;
+    background: url('Images/woman eating.png');
+    background-size: cover;
+    position: relative;
+}
+
+.bgimage2 {
+    height: 100vh;
+    background: url('Images/Front Cover Food Trial Second Part.png');
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
 .image {
@@ -14,8 +42,17 @@
     
 }
 .img-thumbnail {
-    height: 50px;
-    width: 50px;
+    height: 250px;
+    width: 100%;
+}
+
+.jumbotron {
+
+background: white;
+z-index: auto;
+left: 100px;
+top: 500px;
+
 }
 
 .badge.badge-secondary{
@@ -29,15 +66,12 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
     
 }
 
-#skills{
-    margin-top: 4rem;
-    padding-top: 4rem;
-}
+
 
 #contact {
     padding-bottom: 4rem;
@@ -45,31 +79,12 @@
 
 .imageAboutPage {
     width: 100%;
+    z-index: -1;
+    opacity: 0.9;
 }
 
-/* skills section css */
-.skillsText.card {
-    height: 180px;
-    cursor: pointer;
-}
 
-.skillsIcon {
-    font-size: 36px;
-    text-align: center;
-    width: 100%;
-}
 
-.card-title {
-    text-align: center;
-}
-
-.card:hover .skillsIcon {
-    color: #9cc4e8;
-}
-
-.skillsText:hover {
-    border: 1px solid #9cc4e8;
-}
 
 
 
@@ -89,4 +104,7 @@ textarea {
 
 footer{
     background-color: #f5f5ef;
+    width: auto;
+    height: 200px;
+    text-align: left;
 }
