--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -3,40 +3,46 @@
 }
 
 <body>
-    <section class="image" id="home">
+    <section class="bgimage" id="home">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title"></h2>
-                    <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial.png" />
-                    <img class="img-fluid" src="~/Content/Images/Front Cover Food Trial Second Part.png" />
                     <p class="hero_desc"></p>
                 </div>
             </div>
         </div>
     </section>
-   
+    <section class="bgimage2" id="home">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <h2 class="hero_title"></h2>
+                    <p class="hero_desc"></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <div class="row">
         <div class="col-md-4">
             <h2>Create a Food Trial</h2>
-            
-           <div class="container">
-                <a class="btn btn-default" href="https://localhost:44370/Trial/Create">
+
+            <div class="container">
+                <a class="btn btn-default" href="https://localhost:44370/Trial/Create"></a>
 
                     <img class="img-thumbnail" src="~/Content/Images/Create Food Trial pic.jpg" alt="Create a Food Trial">
-                    </a>
+                
             </div>
         </div>
         <div class="col-md-4">
             <h2>Your Past Food Trials</h2>
             <div class="container">
-                <a class="btn btn-default" href="https://localhost:44370/Trial">
-                    <span class="badge badge-secondary">Your Past Food Trials
+                <a class="btn btn-default" href="https://localhost:44370/Trial"></a>
 
                     <img class="img-thumbnail" src="~/Content/Images/Past Food Trials.jpg" alt="Your Past Food Trials">
-                    </span>
-                </a>
+                
 
             </div>
         </div>
@@ -45,10 +51,10 @@
             <h2>Your Food Lists</h2>
             <p></p>
             <div class="container">
-                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">
+                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"></a>
 
                     <img class="img-thumbnail" src="~/Content/Images/Food list.jpg" alt="Your Food Lists">
-                </a>
+                
 
             </div>
         </div>
