--- a/FoodTrial.MVC/Views/Medicine/Index.cshtml
+++ b/FoodTrial.MVC/Views/Medicine/Index.cshtml
@@ -4,21 +4,39 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 @if (TempData.ContainsKey("SaveResult"))
 {
-<div class="alert alert-success fade in" role="alert">
-    @ViewBag.SaveResult
-    <button type="button" class="close" data-dismiss="alert">
-        <span>&times;</span>
-    </button>
-    @TempData["SaveResult"]
-</div>
+    <div class="alert alert-success fade in" role="alert">
+        @ViewBag.SaveResult
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveResult"]
+    </div>
 }
+
+<div class="jumbotron" style="background-color: #f5f5ef">
+
+    <img class="imageAboutPage" src="~/Content/Images/medicine herbs food trial.png" alt="Medicine/Herbs/Homeopathy">
+    <div class="card-body center-block">
+        <div class="card-img-overlay">
+            <h5 class="card-title center-block visible-lg-inline-block"></h5>
+            <div class="jumbotron" style="width: 900px">
+               <center><h1 class="display-4">Want to register a Medicine?</h1></center>
+                <hr class="my-4">
+
+                <a class="btn btn-secondary btn-lg center-block" href="~/Medicine/Create" role="button">Start Here</a>
+
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<center><h1>Your Medicine List</h1></center>
 <table class="table">
     <tr>
         <th>
@@ -36,26 +54,27 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.MedicineId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Dose)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.MedicineId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.MedicineId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.MedicineId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.MedicineId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Dose)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comment)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.MedicineId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.MedicineId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.MedicineId })
+            </td>
+        </tr>
+    }
 
 </table>
