--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -24,39 +24,35 @@
         </div>
     </section>
 
-
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Create a Food Trial</h2>
-
-            <div class="container">
-                <a class="btn btn-default" href="https://localhost:44370/Trial/Create"></a>
-
-                    <img class="img-thumbnail" src="~/Content/Images/Create Food Trial pic.jpg" alt="Create a Food Trial">
-                
+    <section id="homecard" class="bg-light mt-5">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>Where would you like to begin?</h2>
             </div>
-        </div>
-        <div class="col-md-4">
-            <h2>Your Past Food Trials</h2>
-            <div class="container">
-                <a class="btn btn-default" href="https://localhost:44370/Trial"></a>
 
-                    <img class="img-thumbnail" src="~/Content/Images/Past Food Trials.jpg" alt="Your Past Food Trials">
-                
+            <div class="row my-5 align-items-center justify-content-center">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body text-center py-4">
+                            <h3 class="card-title">Create a Food Trial</h3>
+                            <p class="card-text"></p>
+                            <a href="~/Trial/Create" class="btn btn-primary">Start Here</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body text-center py-4">
+                            <h3 class="card-title">Your Past Food Trials</h3>
+                            <p class="card-text"></p>
+                            <a href="~/Trial/index" class="btn btn-primary">Start Here</a>
 
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-
-        <div class="col-md-4">
-            <h2>Your Food Lists</h2>
-            <p></p>
-            <div class="container">
-                <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867"></a>
-
-                    <img class="img-thumbnail" src="~/Content/Images/Food list.jpg" alt="Your Food Lists">
-                
-
-            </div>
-        </div>
-    </div>
+           </div>
+    </section>
+    
+    
 </body>
