added safe food list functionality

--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -13,46 +13,76 @@
             </div>
         </div>
     </section>
-    <section class="bgimage2" id="home">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title"></h2>
-                    <p class="hero_desc"></p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="homecard" class="bg-light mt-5">
+    <section id="mission" class="bg-light mt-5">
         <div class="container-lg">
             <div class="text-center">
-                <h2>Where would you like to begin?</h2>
+                <h2>Welcome to Food Trial Helper!</h2>
             </div>
-
-            <div class="row my-5 align-items-center justify-content-center">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body text-center py-4">
-                            <h3 class="card-title">Create a Food Trial</h3>
-                            <p class="card-text"></p>
-                            <a href="~/Trial/Create" class="btn btn-primary">Start Here</a>
+            <br />
+            <div class="text-center">
+                <p>
+                    The Food Trial App is an application that users can use to help assist them with food trials. Food trials are used to determine if a food is safe or not safe for a person. Often times, tests such as blood, saliva, or skin testing are inaccurate to determine an allergen or intolerance and therefore the gold standard is to do a food trial.
+                </p>
+                <p>
+                    The food trial app will help to keep a record of the trial itself, create a list of food that is safe and not safe to pull from, keep track of symptoms, if medical intervention was necessary and what kind, and help the user be able to determine what food might be used in the next food trial. Having this information organized and easily accessible will help with not only their trial at home or in hospital but also help their medical team to get detailed notes on what foods are causing reactions and what type of reaction is happening in what timeframe. By having better notes and lists this will help the user stay safer and create a better all around plan for their health.
+                </p>
+            </div>
+            
+            </div>
+            </section>
+            <section class="bgimage2" id="home">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                            <h2 class="hero_title"></h2>
+                            <p class="hero_desc"></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body text-center py-4">
-                            <h3 class="card-title">Your Past Food Trials</h3>
-                            <p class="card-text"></p>
-                            <a href="~/Trial/index" class="btn btn-primary">Start Here</a>
+            </section>
+
+            <section id="homecard" class="bg-light mt-5">
+                <div class="container-lg">
+                    <div class="text-center">
+                        <h2>Where would you like to begin?</h2>
+                    </div>
+
+                    <div class="row my-5 align-items-center justify-content-center">
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <div class="card-body text-center py-4">
+                                    <h3 class="card-title">Create a Food Trial</h3>
+                                    <p class="card-text"></p>
+                                    <a href="~/Trial/Create" class="btn btn-primary">Start Here</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <div class="card-body text-center py-4">
+                                    <h3 class="card-title">Your Safe Food List</h3>
+                                    <p class="card-text"></p>
+                                    <a href="~/Trial/Get" class="btn btn-primary">Start Here</a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card">
+                                <div class="card-body text-center py-4">
+                                    <h3 class="card-title">Your Past Food Trials</h3>
+                                    <p class="card-text"></p>
+                                    <a href="~/Trial/index" class="btn btn-primary">Start Here</a>
+
+                                </div>
+                            </div>
 
                         </div>
+
+
                     </div>
                 </div>
-            </div>
-           </div>
-    </section>
-    
-    
+            </section>
+
+
 </body>
