--- a/FoodTrial.MVC/Views/Trial/Details.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Details.cshtml
@@ -51,6 +51,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Symptoms)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Symptoms)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.MedicalIntervention)
         </dt>
 
