--- a/FoodTrial.MVC/Views/Trial/Index.cshtml
+++ b/FoodTrial.MVC/Views/Trial/Index.cshtml
@@ -56,9 +56,11 @@
             <th>
                 @Html.DisplayNameFor(model => model.FoodId)
             </th>
+
             <th>
-                @Html.DisplayNameFor(model => model.Comment)
+                @Html.DisplayNameFor(model => model.Symptoms)
             </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.DateTime)
             </th>
