--- a/FoodTrial.MVC/Views/Home/Index.cshtml
+++ b/FoodTrial.MVC/Views/Home/Index.cshtml
@@ -46,8 +46,10 @@
                     <div class="text-center">
                         <h2>Where would you like to begin?</h2>
                     </div>
+                    <center>
+                    <div class="row my-5 outerContainer align-items-center justify-content-center">
+                        <div class="flex-left">
 
-                    <div class="row my-5 align-items-center justify-content-center">
                         <div class="col-sm-3">
                             <div class="card">
                                 <div class="card-body text-center py-4">
@@ -78,11 +80,16 @@
                             </div>
 
                         </div>
-
-
+                        
+                        </div>
                     </div>
+                       </center>
                 </div>
             </section>
+    <br />
+    <br />
+    <br />
+    <br />
 
 
 </body>
