--- a/FoodTrial.MVC/Content/Site.css
+++ b/FoodTrial.MVC/Content/Site.css
@@ -30,6 +30,21 @@
     position: relative;
 }
 
+.flex-left{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.outerContainer{
+    margin-top: 40px;
+    justify-content: center;
+}
+
+.container-lg{
+   width: 100%;
+}
+
 .hero-text {
     text-align: center;
     position: absolute;
